kubernetes/platform/operational-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: operational-api
  namespace: platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: operational-api

  template:
    metadata:
      labels:
        app: operational-api

    spec:
      serviceAccountName: operational-controller

      containers:
        - name: operational-api
          image: operational-api:stage18
          imagePullPolicy: Never

          ports:
            - containerPort: 8081

          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 15
